[package]
name = "anidb"
version = "0.0.1"
license = "MIT/Apache-2.0"
authors = ["Daniel Collin <daniel@collin.com>"]
description = "Simply talking with the AniIB UDP API"
keywords = ["anidb", "database"]
repository = "https://github.com/emoon/anidb-rs"
homepage = "https://github.com/emoon/anidb-rs"

