[package]
name = "anidb"
version = "0.0.1"
license = "MIT/Apache-2.0"
authors = ["Daniel Collin <daniel@collin.com>"]
description = "Simplify talking with the AniDB UDP API"
keywords = ["anidb", "database"]
repository = "https://github.com/emoon/anidb-rs"
homepage = "https://github.com/emoon/anidb-rs"

[dependencies]
rust-crypto = "^0.2"

